--- a/CrimeAlert/android/app/src/main/AndroidManifest.xml
+++ b/CrimeAlert/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.crimealert">
+    package="com.crimealertteam.crimealert">
    <application
         android:label="crimealert"
         android:name="${applicationName}"
