--- a/CrimeAlert/android/app/src/debug/AndroidManifest.xml
+++ b/CrimeAlert/android/app/src/debug/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.crimealertteam.crimealert">
+    package="com.flutterflow.crimealert">
     <!-- Flutter needs it to communicate with the running application
          to allow setting breakpoints, to provide hot reload, etc.
     -->
